--- a/admin/app/views/spree/admin/products/form/_status.html.erb
+++ b/admin/app/views/spree/admin/products/form/_status.html.erb
@@ -2,7 +2,7 @@
   <div class="card-header">
     <h5 class="card-title"><%= Spree.t(:status) %></h5>
   </div>
-  <div class="card-body pb-0 mb-0">
+  <div class="card-body">
     <div class="row">
       <div data-hook="new_product_status" class="col-6">
         <div class="form-group">
