--- a/admin/app/views/spree/admin/products/form/_stores.html.erb
+++ b/admin/app/views/spree/admin/products/form/_stores.html.erb
@@ -4,7 +4,7 @@
       <%= Spree.t(:stores) %>
     </h5>
   </div>
-  <div class="card-body pb-0">
+  <div class="card-body">
     <div class="form-group">
       <% if can? :modify, Spree::StoreProduct %>
         <p class="form-text"><%= Spree.t('admin.products.stores.choose_stores') %>.</p>
