--- a/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
+++ b/admin/app/views/spree/admin/products/form/variants/_option_template.html.erb
@@ -30,7 +30,7 @@
         <span class="label"><%= Spree.t(:option_values) %></span>
         <div data-controller="multi-input" class="values-inputs" data-slot="optionValuesInput">
           <div class="values-inputs__input" data-multi-input-target="input">
-            <input class="form-control form-control-sm" data-variants-form-option-id-param="" name="new_option_values[]" data-action="multi-input#handleInput keydown->multi-input#handleKeyDown keydown.enter->variants-form#saveOption:prevent">
+            <input class="form-control" data-variants-form-option-id-param="" name="new_option_values[]" data-action="multi-input#handleInput keydown->multi-input#handleKeyDown keydown.enter->variants-form#saveOption:prevent">
           </div>
         </div>
       </div>
