--- a/admin/app/views/spree/admin/stock_transfers/show.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/show.html.erb
@@ -13,7 +13,7 @@
           <%= Spree.t(:products) %>
         </h5>
       </div>
-      <div class="card-body p-0" style="min-height: 300px">
+      <div class="card-body px-0 pb-0" style="min-height: 300px">
         <div class="d-block overflow-y-auto overflow-x-hidden" style="max-height: 300px">
           <div class="table-responsive rounded bg-white">
             <table class="table sortable">
