--- a/admin/app/views/spree/admin/taxons/_form.html.erb
+++ b/admin/app/views/spree/admin/taxons/_form.html.erb
@@ -122,7 +122,7 @@
           <%= Spree.t(:navigation) %>
         </h5>
       </div>
-      <div class="card-body pb-0">
+      <div class="card-body">
         <% if @taxon.new_record? %>
           <% disabled = false %>
         <% else %>
