--- a/admin/app/views/spree/admin/orders/_line_items.html.erb
+++ b/admin/app/views/spree/admin/orders/_line_items.html.erb
@@ -1,7 +1,7 @@
 
 <%= turbo_frame_tag dom_id(@order, :line_items), class: "card mb-4 overflow-hidden" do %>
   <% if @line_items.any? %>
-    <div class="card-header d-flex justify-content-between align-items-center">
+    <div class="card-header d-flex justify-content-between align-items-center pb-3">
       <h5 class="card-title d-flex align-items-center">
         <%= Spree.t(:line_items) %>
         <span class="badge badge-info ml-2"><%= @line_items.count %></span>
@@ -22,7 +22,7 @@
     </div>
     <div class="card-body mb-0 p-0 <% if @order.completed? && params[:line_item_updated].blank? %>collapse<% else %>show<% end %>" id="line-items">
       <div class="order-line-items">
-        <div class="text-muted text-center border-bottom py-2 px-3 font-weight-bold font-size-sm order-line-items__row">
+        <div class="text-muted text-center border-bottom border-top py-2 px-3 font-size-sm order-line-items__row">
           <span class="text-left">
             <%= Spree.t(:item_description) %>
           </span>
