--- a/admin/app/views/spree/admin/orders/_shipment.html.erb
+++ b/admin/app/views/spree/admin/orders/_shipment.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="card-body mb-0 p-0">
     <div class="shipment-line-items">
-      <div class="text-muted text-center border-bottom py-2 px-3 font-size-sm shipment-line-items__row">
+      <div class="text-muted text-center border-bottom border-top py-2 px-3 font-size-sm shipment-line-items__row">
         <span class="text-left">
           <%= Spree.t(:item_description) %>
         </span>
