--- a/admin/app/views/spree/admin/shipping_categories/_form.html.erb
+++ b/admin/app/views/spree/admin/shipping_categories/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="card mb-4">
-  <div class="card-body pb-0">
+  <div class="card-body">
     <div class="form-group">
       <%= f.label :name, Spree.t(:name) %>
       <%= f.text_field :name, class: 'form-control' %>
