--- a/admin/app/views/spree/admin/shipping_methods/_form.html.erb
+++ b/admin/app/views/spree/admin/shipping_methods/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-6">
     <div class="card mb-4">
-      <div class="card-body pb-0">
+      <div class="card-body">
         <div class="row">
           <div class="col-lg-6">
             <div class="form-group">
@@ -32,7 +32,7 @@
           <%= Spree.t(:tracking_url) %>
         </h5>
       </div>
-      <div class="card-body pb-0">
+      <div class="card-body">
         <div class="form-group">
           <%= f.url_field :tracking_url, class: 'form-control', placeholder: Spree.t(:tracking_url_placeholder) %>
           <%= f.error_message_on :tracking_url %>
@@ -51,10 +51,10 @@
           <%= Spree.t(:zones) %>
         </h5>
 
-        <%= link_to_with_icon('settings', Spree.t(:manage_zones), spree.admin_zones_path, class: 'btn btn-sm btn-link ml-auto h-100') if can?(:manage, Spree::Zone) %>
+        <%= link_to_with_icon('adjustments', Spree.t(:manage_zones), spree.admin_zones_path, class: 'btn btn-sm btn-light ml-auto h-100') if can?(:manage, Spree::Zone) %>
       </div>
 
-      <div class="card-body pb-0">
+      <div class="card-body">
         <div class="form-group">
           <% @available_zones.each do |zone| %>
             <div class="custom-control custom-checkbox mb-2">
@@ -79,7 +79,7 @@
         </h5>
       </div>
 
-      <div class="card-body pb-0">
+      <div class="card-body">
         <div class="form-group">
           <% @shipping_categories.each do |category| %>
             <div class="custom-control custom-checkbox mb-2">
@@ -102,7 +102,7 @@
           </h5>
         </div>
 
-        <div class="card-body pb-0">
+        <div class="card-body">
           <div class="form-group">
             <%= f.collection_select(:tax_category_id, @tax_categories, :id, :name, { include_blank: Spree.t('match_choices.none') }, { class: 'custom-select' }) %>
             <%= f.error_message_on :tax_category %>
