--- a/admin/app/views/spree/admin/stock_transfers/new.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/new.html.erb
@@ -60,7 +60,7 @@
           <% end %>
         </span>
       </div>
-      <div class="card-body p-0" style="min-height: 300px">
+      <div class="card-body px-0 pb-0" style="min-height: 300px">
         <div class="d-flex flex-column gap-3 overflow-y-auto overflow-x-hidden p-3" style="max-height: 300px">
           <%= f.fields_for :stock_movements do |smf| %>
             <% if smf.object.errors[:quantity].present? %>
