--- a/admin/app/views/spree/admin/variants/form/_inventory.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_inventory.html.erb
@@ -4,7 +4,7 @@
       <%= Spree.t(:inventory) %>
     </h5>
   </div>
-  <div class="card-body p-0">
+  <div class="card-body px-0 pb-0">
     <table class="table">
       <thead>
         <tr>
