--- a/admin/app/views/spree/admin/orders/_shipment.html.erb
+++ b/admin/app/views/spree/admin/orders/_shipment.html.erb
@@ -1,6 +1,6 @@
 <% order ||= shipment.order %>
 <%= turbo_frame_tag dom_id(shipment), class: "card mb-4" do %>
-  <div class="card-header stock-location justify-content-between flex-wrap" data-hook="stock-location" id="shipment">
+  <div class="card-header stock-location justify-content-between flex-wrap pb-3" data-hook="stock-location" id="shipment">
     <span class="shipment-number d-none"><%= shipment.number %></span>
     <span class="d-flex align-items-center"><%= shipment_state(shipment.state, class: 'mr-3') %></span>
     <% if shipment.shipped_at.present? %>
