Admin UI update

--- a/admin/app/views/spree/admin/option_types/_form.html.erb
+++ b/admin/app/views/spree/admin/option_types/_form.html.erb
@@ -52,9 +52,9 @@
     <div class="card-header d-flex justify-content-between align-items-center">
       <h5 class="mb-0"><%= Spree.t(:option_values) %></h5>
     </div>
-    <div class="card-body px-0 pb-0">
+    <div class="card-body p-0">
       <div class="table-responsive">
-        <table class="table border-top">
+        <table class="table">
           <thead>
             <tr class="border-bottom">
               <th></th>
