--- a/admin/app/views/spree/admin/variants/form/_pricing.html.erb
+++ b/admin/app/views/spree/admin/variants/form/_pricing.html.erb
@@ -8,8 +8,8 @@
       <%= link_to_with_icon 'adjustments', Spree.t(:manage_currencies), spree.edit_admin_store_path, class: 'btn btn-sm btn-light' %>
     <% end %>
   </div>
-  <div class="card-body px-0 pb-0">
-    <table class="table border-top">
+  <div class="card-body p-0">
+    <table class="table">
       <thead>
         <tr>
           <th><%= Spree.t(:currency) %></th>
