--- a/admin/app/views/spree/admin/orders/_line_items.html.erb
+++ b/admin/app/views/spree/admin/orders/_line_items.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="card-body mb-0 p-0 <% if @order.completed? && params[:line_item_updated].blank? %>collapse<% else %>show<% end %>" id="line-items">
       <div class="order-line-items">
-        <div class="text-muted text-center border-bottom border-top py-2 px-3 font-size-sm order-line-items__row">
+        <div class="text-muted text-center border-bottom py-2 px-3 font-size-sm order-line-items__row">
           <span class="text-left">
             <%= Spree.t(:item_description) %>
           </span>
