--- a/admin/app/views/spree/admin/orders/_shipment.html.erb
+++ b/admin/app/views/spree/admin/orders/_shipment.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="card-body mb-0 p-0">
     <div class="shipment-line-items">
-      <div class="text-muted text-center border-bottom border-top py-2 px-3 font-size-sm shipment-line-items__row">
+      <div class="text-muted text-center border-bottom py-2 px-3 font-size-sm shipment-line-items__row">
         <span class="text-left">
           <%= Spree.t(:item_description) %>
         </span>
@@ -70,7 +70,7 @@
       </div>
 
       <% if can?(:update, shipment) && (!order.canceled? && !shipment.canceled?) %>
-        <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_order_shipment_path(order, shipment), class: 'edit-tracking btn btn-light btn-sm', no_text: true, title: Spree.t(:edit) %>
+        <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_order_shipment_path(order, shipment), class: 'edit-tracking btn btn-light btn-sm with-tip', no_text: true, title: Spree.t(:edit) %>
       <% end %>
     <% end %>
 
