--- a/admin/app/views/spree/admin/products/form/_properties.html.erb
+++ b/admin/app/views/spree/admin/products/form/_properties.html.erb
@@ -6,8 +6,8 @@
       <%= link_to_with_icon 'adjustments', Spree.t(:manage_properties), spree.admin_properties_path, class: 'btn btn-sm btn-light' %>
     <% end %>
   </div>
-  <div class="card-body px-0 pb-0">
-    <table class="table border-top mb-1">
+  <div class="card-body p-0">
+    <table class="table">
       <thead>
         <tr>
           <th><%= Spree.t(:property) %></th>
