--- a/admin/app/views/spree/admin/products/form/_variants.html.erb
+++ b/admin/app/views/spree/admin/products/form/_variants.html.erb
@@ -4,7 +4,7 @@
       <h5 class="card-title"><%= Spree.t(:variants) %></h5>
     </div>
     <% option_types_for_select = @option_types.pluck(:presentation, :id) %>
-    <div class="card-body px-0 pb-0">
+    <div class="card-body p-0">
       <div
         data-controller="variants-form"
         class="variants-form"
