Add `Store#default_country_iso` setter
To easily assign default country based on iso, not ID
It will also automatically create the country based on the information from `countries` gem if it's not in the database already

--- a/admin/app/views/spree/admin/products/form/_status.html.erb
+++ b/admin/app/views/spree/admin/products/form/_status.html.erb
@@ -3,8 +3,8 @@
     <h5 class="card-title"><%= Spree.t(:status) %></h5>
   </div>
   <div class="card-body">
-    <div class="row">
-      <div data-hook="new_product_status" class="col-6">
+    <div class="row mb-3">
+      <div class="col-6">
         <div class="form-group">
           <%= f.label :status, Spree.t(:status) %>
           <%= help_bubble(Spree.t('admin.products.status_form.status')) if show_product_status_help_bubble? %>
