--- a/admin/app/views/spree/admin/products/index.html.erb
+++ b/admin/app/views/spree/admin/products/index.html.erb
@@ -1,13 +1,11 @@
-<%= render 'index_header' %>
+<%= render "index_header" %>
 
-<div class="card-lg p-0">
-  <% if params[:frame_name].present? %>
-    <%= turbo_frame_tag params[:frame_name], autoscroll: true, data: { autoscroll_block: :start, autoscroll_behavior: :smooth } do %>
-      <%= render 'filters' %>
-      <%= render 'list' %>
-    <% end %>
-  <% else %>
-    <%= render 'filters' %>
-    <%= render 'list' %>
+<% if params[:frame_name].present? %>
+  <%= turbo_frame_tag params[:frame_name], autoscroll: true, data: { autoscroll_block: :start, autoscroll_behavior: :smooth } do %>
+    <%= render "filters" %>
+    <%= render "list" %>
   <% end %>
-</div>
+<% else %>
+  <%= render "filters" %>
+  <%= render "list" %>
+<% end %>
