Use `content_for` on every page with filters

--- a/admin/app/views/spree/admin/option_types/index.html.erb
+++ b/admin/app/views/spree/admin/option_types/index.html.erb
@@ -2,13 +2,15 @@
   <%= Spree.t(:options) %>
 <% end %>
 
-<% content_for :page_actions do %>
-  <span id="new_ot_link">
-    <%= button_link_to Spree.t(:new_option_type),
-    new_object_url,
-    { class: "btn-primary", icon: "plus", id: "new_option_type_link" } %>
-  </span>
-<% end if can?(:create, Spree::OptionType) %>
+<% if can?(:create, Spree::OptionType) %>
+  <% content_for :page_actions do %>
+    <span id="new_ot_link">
+      <%= button_link_to Spree.t(:new_option_type),
+      new_object_url,
+      { class: "btn-primary", icon: "plus", id: "new_option_type_link" } %>
+    </span>
+  <% end %>
+<% end %>
 
 <%= content_for(:page_alerts) do %>
   <div class="alert alert-info">
@@ -19,45 +21,42 @@
 
 <div id="new_option_type"></div>
 
-<div class="card-lg p-0">
+<%= render partial: "spree/admin/option_types/filter" %>
 
-  <%= render partial: "spree/admin/option_types/filter" %>
-
-  <% if @option_types.any? %>
-    <div class="table-responsive">
-      <table class="table" id="listing_option_types">
-        <thead class="text-muted">
-          <tr>
-            <th class="no-border handel-head"></th>
-            <th><%= Spree.t(:internal_name) %></th>
-            <th>
-              <%= Spree.t(:presentation) %>
-              <%= help_bubble("How this option is presented to customers") %>
-            </th>
-            <th>
-              <%= Spree.t(:filterable) %>
-              <%= help_bubble("Whether this option can be used in product filters") %>
-            </th>
-            <th>
-              <%= Spree.t(:option_values) %>
-            </th>
-            <th>
-              <%= Spree.t(:products) %>
-            </th>
-            <th class="actions"></th>
-          </tr>
-        </thead>
-        <tbody
-          data-controller="sortable"
-          data-sortable-handle-value=".move-handle"
-          data-sortable-resource-name-value="option_type"
-          data-sortable-response-kind-value="turbo-stream"
-        >
-          <%= render partial: "spree/admin/option_types/option_type", collection: @option_types %>
-        </tbody>
-      </table>
-    </div>
-  <% else %>
-    <%= render "spree/admin/shared/no_resource_found" %>
-  <% end %>
-</div>
+<% if @option_types.any? %>
+  <div class="table-responsive">
+    <table class="table" id="listing_option_types">
+      <thead class="text-muted">
+        <tr>
+          <th class="no-border handel-head"></th>
+          <th><%= Spree.t(:internal_name) %></th>
+          <th>
+            <%= Spree.t(:presentation) %>
+            <%= help_bubble("How this option is presented to customers") %>
+          </th>
+          <th>
+            <%= Spree.t(:filterable) %>
+            <%= help_bubble("Whether this option can be used in product filters") %>
+          </th>
+          <th>
+            <%= Spree.t(:option_values) %>
+          </th>
+          <th>
+            <%= Spree.t(:products) %>
+          </th>
+          <th class="actions"></th>
+        </tr>
+      </thead>
+      <tbody
+        data-controller="sortable"
+        data-sortable-handle-value=".move-handle"
+        data-sortable-resource-name-value="option_type"
+        data-sortable-response-kind-value="turbo-stream"
+      >
+        <%= render partial: "spree/admin/option_types/option_type", collection: @option_types %>
+      </tbody>
+    </table>
+  </div>
+<% else %>
+  <%= render "spree/admin/shared/no_resource_found" %>
+<% end %>
