--- a/admin/app/views/spree/admin/properties/index.html.erb
+++ b/admin/app/views/spree/admin/properties/index.html.erb
@@ -8,59 +8,53 @@
   </div>
 <% end %>
 
-<% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_property), new_object_url, { class: "btn-primary", icon: "plus" } %>
-<% end if can?(:create, Spree::Property)  %>
+<% if can?(:create, Spree::Property) %>
+  <% content_for :page_actions do %>
+    <%= button_link_to Spree.t(:new_property), new_object_url, { class: "btn-primary", icon: "plus" } %>
+  <% end %>
+<% end %>
 
-<div class="card-lg p-0">
-
-  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"} do |f| %>
-    <div class="d-flex flex-column flex-lg-row">
-      <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
-        <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
-          <%= icon "search", class: "mr-3 text-muted" %>
-          <%= f.search_field :name_or_presentation_cont,
-                         class: "form-control-plaintext px-0",
-                         placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}",
-                         data: {
-                           ransack_target: :input,
-                           badge_name: Spree.t(:name),
-                         } %>
-        </div>
-      </div>
+<%= search_form_for [:admin, @search] do |f| %>
+  <% content_for :table_filter_main_search do %>
+    <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
+      <%= icon "search", class: "mr-3 text-muted" %>
+      <%= f.search_field :name_or_presentation_cont,
+                     class: "form-control-plaintext px-0",
+                     placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}",
+                     data: {
+                       ransack_target: :input,
+                       badge_name: Spree.t(:name),
+                     } %>
     </div>
-
-    <%= render "spree/admin/shared/filter_badge_template" %>
-
-    <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
   <% end %>
 
-  <% if @properties.present? %>
-    <div class="table-responsive">
-      <table class="table" id='listing_properties'>
-        <thead class="text-muted">
-          <tr>
-            <th class="no-border handel-head"></th>
-            <th><%= Spree.t(:internal_name) %></th>
-            <th><%= Spree.t(:presentation) %></th>
-            <th><%= Spree.t(:kind) %></th>
-            <th><%= Spree.t(:products) %></th>
-            <th><%= Spree.t(:visibility) %></th>
-            <th class="actions"></th>
-          </tr>
-        </thead>
-        <tbody
-          data-controller="sortable"
-          data-sortable-handle-value=".move-handle"
-          data-sortable-resource-name-value="property"
-          data-sortable-response-kind-value="turbo-stream"
-        >
-          <%= render partial: "spree/admin/properties/property", collection: @collection, cached: spree_base_cache_scope %>
-        </tbody>
-      </table>
-      <%= render "spree/admin/shared/index_table_options", collection: @collection, simple: true %>
-    </div>
-  <% else %>
-    <%= render "spree/admin/shared/no_resource_found" %>
-  <% end %>
-</div>
+<% end %>
+
+<% if @properties.present? %>
+  <div class="table-responsive">
+    <table class="table" id='listing_properties'>
+      <thead class="text-muted">
+        <tr>
+          <th class="no-border handel-head"></th>
+          <th><%= Spree.t(:internal_name) %></th>
+          <th><%= Spree.t(:presentation) %></th>
+          <th><%= Spree.t(:kind) %></th>
+          <th><%= Spree.t(:products) %></th>
+          <th><%= Spree.t(:visibility) %></th>
+          <th class="actions"></th>
+        </tr>
+      </thead>
+      <tbody
+        data-controller="sortable"
+        data-sortable-handle-value=".move-handle"
+        data-sortable-resource-name-value="property"
+        data-sortable-response-kind-value="turbo-stream"
+      >
+        <%= render partial: "spree/admin/properties/property", collection: @collection, cached: spree_base_cache_scope %>
+      </tbody>
+    </table>
+    <%= render "spree/admin/shared/index_table_options", collection: @collection, simple: true %>
+  </div>
+<% else %>
+  <%= render "spree/admin/shared/no_resource_found" %>
+<% end %>
