--- a/admin/app/views/spree/admin/taxonomies/index.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/index.html.erb
@@ -2,49 +2,47 @@
   <%= Spree.t(:taxonomies) %>
 <% end %>
 
-<% content_for :page_actions do %>
-  <%= button_link_to Spree.t(:new_taxonomy), new_object_url, { class: "btn-primary", icon: "plus" } %>
-<% end if can?(:create, Spree::Taxonomy) %>
+<% if can?(:create, Spree::Taxonomy) %>
+  <% content_for :page_actions do %>
+    <%= button_link_to Spree.t(:new_taxonomy), new_object_url, { class: "btn-primary", icon: "plus" } %>
+  <% end %>
+<% end %>
 
-<div class="card-lg p-0">
-  <%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"} do |f| %>
-    <div class="d-flex flex-column flex-lg-row">
-      <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
-        <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
-          <%= icon "search", class: "mr-3 text-muted" %>
-          <%= f.search_field :name_cont,
-                         class: "form-control-plaintext px-0",
-                         placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}",
-                         data: {
-                           ransack_target: :input,
-                           badge_name: Spree.t(:name),
-                         } %>
-        </div>
-      </div>
+<%= search_form_for [:admin, @search] do |f| %>
+  <%= content_for :table_filter_main_search do %>
+    <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
+      <%= icon "search", class: "mr-3 text-muted" %>
+      <%= f.search_field :name_cont,
+                     class: "form-control-plaintext px-0",
+                     placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}",
+                     data: {
+                       ransack_target: :input,
+                       badge_name: Spree.t(:name),
+                     } %>
     </div>
   <% end %>
+<% end %>
 
-  <% if @taxonomies.present? %>
-    <div class="table-responsive">
-      <table class="table" id='listing_taxonomies'>
-        <thead class="text-muted">
-          <tr data-hook="listing_taxonomies_header">
-            <th class="no-border handel-head"></th>
-            <th><%= Spree.t(:name) %></th>
-            <th><%= Spree.t(:taxons) %></th>
-            <th class="actions"></th>
-          </tr>
-        </thead>
-        <tbody
-          data-controller="sortable"
-          data-sortable-handle-value=".move-handle"
-          data-sortable-resource-name-value="taxonomy"
-        >
-          <%= render partial: "spree/admin/taxonomies/taxonomy", collection: @collection, cached: spree_base_cache_scope %>
-        </tbody>
-      </table>
-    </div>
-  <% else %>
-    <%= render "spree/admin/shared/no_resource_found" %>
-  <% end %>
-</div>
+<% if @taxonomies.present? %>
+  <div class="table-responsive">
+    <table class="table" id='listing_taxonomies'>
+      <thead class="text-muted">
+        <tr data-hook="listing_taxonomies_header">
+          <th class="no-border handel-head"></th>
+          <th><%= Spree.t(:name) %></th>
+          <th><%= Spree.t(:taxons) %></th>
+          <th class="actions"></th>
+        </tr>
+      </thead>
+      <tbody
+        data-controller="sortable"
+        data-sortable-handle-value=".move-handle"
+        data-sortable-resource-name-value="taxonomy"
+      >
+        <%= render partial: "spree/admin/taxonomies/taxonomy", collection: @collection, cached: spree_base_cache_scope %>
+      </tbody>
+    </table>
+  </div>
+<% else %>
+  <%= render "spree/admin/shared/no_resource_found" %>
+<% end %>
