--- a/admin/app/views/spree/admin/stock_transfers/_filters.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/_filters.html.erb
@@ -1,33 +1,52 @@
-<div >
-  <%= search_form_for [:admin, @search] do |f| %>
-    <div  class="row">
-      <div class="col-12 col-lg-6">
-        <div class="form-group">
-          <%= f.label :number_cont, Spree.t(:number) %>
-          <%= f.text_field :number_cont, include_blank: true, size: 15, class: 'form-control js-quick-search-target js-filterable' %>
-        </div>
-      </div>
+<%= search_form_for [:admin, @search] do |f| %>
+  <%= content_for :table_filter_main_search do %>
+    <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
+      <%= icon "search", class: "mr-3 text-muted" %>
+      <%= search_field_tag "q[number_cont]",
+      params.dig(:q, :number_cont),
+      class: "form-control-plaintext js-quick-search px-0",
+      placeholder: "#{Spree.t(:search_by)} #{Spree.t(:number)}",
+      data: {
+        ransack_target: :input,
+        badge_name: Spree.t(:number),
+      } %>
+    </div>
+  <% end %>
+  <%= content_for :table_filter do %>
+    <div class="row">
       <div class="col-12 col-lg-6">
         <div class="form-group">
           <%= f.label :reference_cont, Spree.t(:reference) %>
-          <%= f.text_field :reference_cont, include_blank: true, size: 15, class: 'form-control js-filterable' %>
+          <%= f.text_field :reference_cont, include_blank: true, size: 15, class: "form-control", data: { ransack_target: :input } %>
         </div>
       </div>
       <div class="col-12 col-lg-6">
         <div class="form-group">
           <%= f.label :source_location_id_eq, Spree.t(:source) %>
-          <%= f.select :source_location_id_eq, available_stock_locations_list, { include_blank: true }, class: 'custom-select js-filterable' %>
+          <%= f.select :source_location_id_eq,
+                   available_stock_locations_list,
+                   { include_blank: true },
+                   class: "custom-select",
+                   data: {
+                     ransack_target: :input,
+                   } %>
         </div>
       </div>
       <div class="col-12 col-lg-6">
         <div class="form-group">
           <%= f.label :destination_location_id_eq, Spree.t(:destination) %>
-          <%= f.select :destination_location_id_eq, available_stock_locations_list, { include_blank: true }, class: 'custom-select js-filterable' %>
+          <%= f.select :destination_location_id_eq,
+                   available_stock_locations_list,
+                   { include_blank: true },
+                   class: "custom-select",
+                   data: {
+                     ransack_target: :input,
+                   } %>
         </div>
       </div>
     </div>
     <div class="form-actions">
-      <%= button Spree.t(:search), 'search' %>
+      <%= button Spree.t(:search), "search" %>
     </div>
   <% end %>
-</div>
+<% end %>
