--- a/admin/app/views/spree/admin/option_types/_filter.html.erb
+++ b/admin/app/views/spree/admin/option_types/_filter.html.erb
@@ -1,15 +1,20 @@
-<%= search_form_for [:admin, @search] do |f| %>
-  <%= content_for :table_filter_main_search do %>
-    <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
-      <%= icon "search", class: "mr-3 text-muted" %>
-      <%= f.search_field :name_cont,
-                     class: "form-control-plaintext px-0",
-                     data: {
-                       ransack_target: :input,
-                       badge_name: Spree.t(:name),
-                     },
-                     placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}" %>
+<%= search_form_for [:admin, @search], class: "filter-wrap border-bottom", data: {controller: "ransack"} do |f| %>
+  <div class="d-flex flex-column flex-lg-row">
+    <div class="flex-grow-1 mr-lg-2 mb-3 mb-lg-0">
+      <div class="form-control d-flex align-items-center py-0 focus-shadow-blue focus-border-blue">
+        <%= icon "search", class: "mr-3 text-muted" %>
+        <%= f.search_field :name_cont,
+                       class: "form-control-plaintext px-0",
+                       data: {
+                         ransack_target: :input,
+                         badge_name: Spree.t(:name),
+                       },
+                       placeholder: "#{Spree.t(:search_by)} #{Spree.t(:name)}" %>
+      </div>
     </div>
-  <% end %>
+  </div>
 
+  <%= render "spree/admin/shared/filter_badge_template" %>
+
+  <div data-ransack-target="badgesContainer" class="filter-badges-container"></div>
 <% end %>
