--- a/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
+++ b/admin/app/views/spree/admin/orders/_table_filter_dropdown.html.erb
@@ -1,5 +1,5 @@
 <% if controller_name == 'orders' %>
-  <div class="dropdown h-100">
+  <div class="dropdown h-100 mr-2">
     <button class="btn btn-light h-100" type="button" data-toggle="dropdown" aria-expanded="false">
       <span class="text-muted font-weight-normal">Show:</span> <%= order_filter_dropdown_value %>
       <%= icon('chevron-down', class: 'arrow ml-1 mr-0 mr-0') %>
